# reservoir_ai_project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Reservoir_Analysis.ipynb  __init__.py  data_parser  digital_twin.py  docker-compose.yml  download_and_process_real_data.py  download_opm_data.py  ensemble_model.py  environment.yml  fix_project.py  main.py  main_refactored.py  predict.py  pyproject.toml  report_generator.py  requirements.txt  rl_reservoir_optimizer.py  run_complete_spe9.py  run_experiments.py  run_final.py  run_phd_experiment.py  run_pipeline.py  run_project.py  run_real_spe9.py  run_simulation.py  run_training.py  run_ultra_safe.py  runner.py  setup.py  test_final.py  test_final_imports.py  test_real_data.py  test_setup.py  test_simulation.py  test_synthetic_data.py  train_models.py  (+2 more)
.github/workflows/: ci.yml
analysis/: __init__.py  performance_calculator.py  plot_generator.py
benchmarks/: performance_benchmark.py
config/: __init__.py  config.yaml  data_config.py  grid_parameters.json  init.py  model_config.py  simulation_config.yaml  training_config.py  well_controls.json
configs/: spe9_train.yaml
core/: base_model.py  init.py  physics_layers.py  reservoir_nn.py  temporal_models.py
data/: SPE9.DATA  SPE9_GRID.INC  SPE9_PORO.INC  SPE9_PVT.INC  SPE9_SATURATION_TABLES.INC  base_loader.py  download_spe9.py  init.py  spe9  spe9_loader.py
data_parser/: __init__.py  spe9_parser.py
docs/: API.md  Makefile  conf.py  technical_specifications.md  user_guide.md
ensemble/: base_ensemble.py  ensemble_trainer.py  init.py
examples/: example_advanced.py  example_basic.py  example_google_drive.py
experiments/: run_experiments.py
experiments/configs/: spe9.yaml  spe9_config.yaml
kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secrets.yaml  service.yaml
kubernetes/monitoring/: grafana-dashboard.yaml  prometheus-rules.yaml
kubernetes/scripts/: deploy.sh
notebook/: Reservoir_Simulation.ipynb
notebooks/: Reservoir_Simulation.ipynb
scripts/: analyze_real_spe9.py  analyze_spe9_data.py  check_performance.py  download_and_analyze.py  download_opm_data.py  download_spe9.py  generate_docs.py  generate_missing_data.py  run_real_spe9.py  smoke-test.sh  validate_data.py
src/: __init__.py  analyzer.py  cnn_lstm_model.py  config.py  data_loader.py  data_preprocessing.py  data_validator.py  economics.py  eda.py  ensemble_model.py  ensemble_trainer.py  evaluator.py  feature_engineer.py  feature_engineering.py  hyperparameter_tuning.py  init.py  main_pipeline.py  model_evaluation.py  model_factory.py  model_training.py  opm_data_loader.py  parameters.py  physics_informed.py  results_processor.py  shap_analysis.py  simulation_runner.py  simulator.py  spe9_data_parser.py  spe9_parser.py  spe9_processor.py  svr_model.py  temporal_model.py  train.py  trainer.py  utils.py  visualization.py  visualizer.py
src/api/: __init__.py  main.py
src/data/: downloader.py  eclipse_parser.py  preprocessor.py  real_parser.py  real_spe9_loader.py  spe9_loader.py  spe9_parser.py
src/evaluation/: physics_metrics.py
src/experiments/: runner.py  spe9_experiment.py
src/ml/: __init__.py  cnn_3d_reservoir.py  cnn_reservoir.py  hybrid_cnn_lstm.py  lstm_production.py  svr_economics.py  svr_economics.py)
tests/: __init__.py  conftest.py  test_data_loader.py  test_data_validation.py  test_integration.py  test_metrics.py  test_models.py  test_results_analysis.py  test_simulation.py  test_simulator.py
utils/: init.py  metrics.py  visualization.py
(+18 files in other folders)
