[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reservoir-physics-ml"
version = "0.1.0"
description = "Physics-Informed Machine Learning for Reservoir Simulation"
readme = "README.md"
authors = [
    {name = "Researcher", email = "research@university.edu"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "torch>=1.9.0",
    "pytorch-lightning>=1.5.0",
    "scikit-learn>=0.24.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "h5py>=3.3.0",
    "pyyaml>=6.0",
    "tqdm>=4.62.0",
    "wandb>=0.12.0",
    "opm>=2021.10",  # Open Porous Media
    "meshio>=5.0.0",
    "pytest>=6.2.0",
    "black>=21.0",
    "flake8>=4.0",
    "mypy>=0.900",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0",
    "pytest-cov>=3.0.0",
    "pre-commit>=2.15.0",
]
paper = [
    "jupyter-book>=0.12.0",
    "sphinx>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/reservoir-physics-ml"
Repository = "https://github.com/yourusername/reservoir-physics-ml.git"
"Bug Tracker" = "https://github.com/yourusername/reservoir-physics-ml/issues"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
